--- a/ZooWebsite/templates/template.html
+++ b/ZooWebsite/templates/template.html
@@ -22,7 +22,7 @@
           <li><a href="/">Главная</a></li>
           <li><a href="/prices">Цены</a></li>
           <li><a href="/services">Сервисы</a></li>
-          <li><a href="/">О нас</a></li>
+          <li><a href="/about">О нас</a></li>
         </ul>
       </nav>
     </div>
