--- a/ZooWebsite/templates/prices.html
+++ b/ZooWebsite/templates/prices.html
@@ -15,36 +15,36 @@
     <section class="prices-section">
         <h1 class="section-title">Цены</h1>
         <div class="price-cards-container">
-        <div class="price-card">
-            <img src="..\img\cat.jpg" alt="Кошка" class="price-image">
-            <h2>Кошки</h2>
-            <p>Один час (в течение 1 рабочего дня)</p>
-            <p class="price">100 ₽</p>
-            <p>1 день (до 7 дней)</p>
-            <p class="price">550 ₽</p>
-            <p>1 день (от 8 до 14 дней)</p>
-            <p class="price">500 ₽</p>
-        </div>
-        <div class="price-card">
-            <img src="..\img\small-dog.jpg" alt="Маленькая собака" class="price-image">
-            <h2>Маленькие собаки</h2>
-            <p>Один час (в течение 1 рабочего дня)</p>
-            <p class="price">200 ₽</p>
-            <p>1 день (до 7 дней)</p>
-            <p class="price">750 ₽</p>
-            <p>1 день (от 8 до 14 дней)</p>
-            <p class="price">700 ₽</p>
-        </div>
-        <div class="price-card">
-            <img src="..\img\big-dog.jpg" alt="Большая собака" class="price-image">
-            <h2>Большие собаки</h2>
-            <p>Один час (в течение 1 рабочего дня)</p>
-            <p class="price">300 ₽</p>
-            <p>1 день (до 7 дней)</p>
-            <p class="price">950 ₽</p>
-            <p>1 день (от 8 до 14 дней)</p>
-            <p class="price">900 ₽</p>
-        </div>
+            <div class="price-card">
+                <img src="/static/img/cotix.jpg" alt="Кошка" class="price-image">
+                <h2>Кошки</h2>
+                <p>Один час (в течение 1 рабочего дня)</p>
+                <p class="price">100 ₽</p>
+                <p>1 день (до 7 дней)</p>
+                <p class="price">550 ₽</p>
+                <p>1 день (от 8 до 14 дней)</p>
+                <p class="price">500 ₽</p>
+            </div>
+            <div class="price-card">
+                <img src="/static/img/small_gogic.jpg" alt="Маленькая собака" class="price-image">
+                <h2>Маленькие собаки</h2>
+                <p>Один час (в течение 1 рабочего дня)</p>
+                <p class="price">200 ₽</p>
+                <p>1 день (до 7 дней)</p>
+                <p class="price">750 ₽</p>
+                <p>1 день (от 8 до 14 дней)</p>
+                <p class="price">700 ₽</p>
+            </div>
+            <div class="price-card">
+                <img src="/static/img/big_dogic.jpg" alt="Большая собака" class="price-image">
+                <h2>Большие собаки</h2>
+                <p>Один час (в течение 1 рабочего дня)</p>
+                <p class="price">300 ₽</p>
+                <p>1 день (до 7 дней)</p>
+                <p class="price">950 ₽</p>
+                <p>1 день (от 8 до 14 дней)</p>
+                <p class="price">900 ₽</p>
+            </div>
         </div>
     </section>
 {% endblock %}
