--- a/ZooWebsite/static/css/template.css
+++ b/ZooWebsite/static/css/template.css
@@ -57,11 +57,14 @@ nav a {
 .header .btn-send{
     width: 150px;
     height: 40px;
+    line-height: 40px;
     background-color: #d70027;
     color: white;
     border: 2px solid #d70027;
     border-radius: 18px;
     cursor: pointer;
+    text-align: center;
+    text-decoration: none;
 }
 
 main {
