--- a/ZooWebsite/templates/template.html
+++ b/ZooWebsite/templates/template.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/template.css' %}">
+  
   {% block css %}{% endblock %}
 </head>
 
@@ -27,15 +28,21 @@
       </nav>
     </div>
     <div class="btn-send">
-      <button class="btn-send">Отправить заявку</button>
+      <a href="/" class="btn-send">Отправить заявку</a>
     </div>
   </header>
 
+  <!-- Модальное окно -->
+    
+  
   <main>
     {% block content %}
     <!-- Сюда будет подставляться контент из других страниц -->
     {% endblock %}
   </main>
+  <script src="{% static 'js/script.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 
 </body>
 </html>
