--- a/ZooWebsite/static/css/template.css
+++ b/ZooWebsite/static/css/template.css
@@ -70,3 +70,142 @@ nav a {
 main {
     padding-top: 80px; /* Высота хедера */
 }
+
+/* FOOTER */
+/* ________________________________________________________________________________________________________________________________________________________ */
+footer {
+   width: 100%;
+   height: 400px;
+   background-color: white;
+   border: 1px solid #d70027;
+}
+
+.footer {
+    display: flex;
+    gap: 123px;
+    flex-direction: row;
+    width: 100%;
+    height: 306px;
+    padding: 48px 100px 0px 100px;
+    border-bottom: 2px solid #d70027;
+}
+
+
+.footer .block-footer-contacts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 266px;
+    height: 245px;
+    gap: 24px;
+}
+
+.block-footer-contacts .footer-logo img{
+    width: 56px;
+    height: 56px;
+}
+
+.block-footer-contacts .footer-info{
+    display: flex;
+    flex-direction: column;
+    width: 266px;
+    margin: 0;
+    padding: 0;
+    gap: 24px;
+}
+
+.block-footer-contacts .footer-info h2, p, a{
+    font-size: 16px;
+    color: #d70027;
+    text-align: left;
+    margin: 0;
+    padding: 0;
+}
+
+.block-footer-contacts .footer-info h2 {
+    margin-bottom: 4px;
+}
+
+.footer-info .footer-adress {
+    display: flex;
+    flex-direction: column;
+    width: 266px;
+    height: 46px;
+}
+
+.footer-info .footer-contact {
+    display: flex;
+    flex-direction: column;
+    width: 266px;
+    margin: 0;
+    padding: 0;
+}
+
+.block-footer-contacts .footer-icons {
+    width: 168px;
+    height: 24px;
+    gap: 12px;
+}
+
+.footer .footer-links {
+    display: flex;
+    flex-direction: row;
+    width: 772px;
+    height: 185px;
+    gap: 32px;
+    padding-top: 58px;
+    padding-left: 123px;
+}
+
+.footer .first-block, .second-block, .third-block{
+    display: flex;
+    flex-direction: column;
+    width: 254px;
+    height: 185px;
+}
+
+.footer .first-block, .second-block, .third-block h3{
+    display: block;
+    width: 254px;
+    height: 37px;
+    font-size: 14px;
+}
+
+footer .privacy-policy {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    background-color: white;
+    width: 100%;
+    height: 92px;
+    padding: 0px 100px 0px 100px;
+    margin: 0;
+    line-height: 92px;
+    box-sizing: border-box;
+}
+
+.privacy-policy .privacy-text{
+    width: 240px;
+    height: 21px;
+}
+
+.privacy-policy .privacy-text p{
+    font-size: 14px;
+    color: #d70027;
+    margin: 0;
+}
+
+.privacy-policy .privacy-links {
+    display: flex;
+    flex-direction: row;
+    width: 355px;
+    height: 21px;
+    gap: 24px;
+}
+
+.privacy-policy .privacy-links a{
+   font-size: 14px;
+   color: #d70027;
+   margin: 0;
+}
+/* <-- FOOTER END --> */
