--- a/ZooWebsite/templates/about.html
+++ b/ZooWebsite/templates/about.html
@@ -20,6 +20,18 @@
                 Это большой плюс для здоровья наших гостей, ведь в воздухе не будет химикатов. С первых минут пребывания в нашем отеле вы в полной мере 
                 сможете оценить внимательность персонала и приятно быструю регистрацию.
             </p>
+            <h2 class="about-title">Правила заселения:</h2>
+            <p class="about-description">• Приём животных с 10:00 до 12:00.<br>
+                • При себе иметь ветеринарный паспорт животного с указанием вакцинаций, обработки от эктопаразитов и дегельминтализации, проставленные по возрасту и по срокам.<br>
+                • Корм предоставляет хозяин.<br>
+                • Без ветеринарного паспорта животные на передержку не принимаются!<br>
+                • Животные в возрасте до 6 месяцев на передержку не принимаются!<br>
+                • Агрессивные собаки на передержку не принимаются!<br>
+                • Бронирование на передержку животного обязательно по телефону.<br>
+                • Выгул собак 3 раза в день на специально оборудованных площадках для выгула.<br>
+                • Комнатные вольеры летом с охлаждением, зимой — с подогревом.<br>
+                • Уличные вольеры просторные, уютные, будки зимой обязательны, летом по желанию.<br>
+                • Для кошек: лоток для туалета и наполнитель предоставляется.</p>
             <p class="about-love">Животные окружены заботой и любовью!</p>
         </div>
     </section>
