--- a/ZooWebsite/static/css/contacts.css
+++ b/ZooWebsite/static/css/contacts.css
@@ -1,11 +1,11 @@
 .contact-page {
+    width: 100%;
+    height: 600px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     padding: 40px;
     background-color: #ffffff;
-    margin: 20px;
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -14,15 +14,15 @@
     padding-right: 20px;
 }
 
-.contact-info h1 {
-    font-size: 28px;
+.contact-page h1 {
+    font-size: 32px;
     font-weight: bold;
     color: #333;
     margin-bottom: 20px;
 }
 
 .contact-info p {
-    font-size: 16px;
+    font-size: 24px;
     color: #555;
     margin-bottom: 10px;
     line-height: 1.5;
