--- a/ZooWebsite/templates/index.html
+++ b/ZooWebsite/templates/index.html
@@ -16,8 +16,8 @@
 <!-- БЛОК -> ГЛАВНЫЙ КОНТЕНТ -->
   <div class="welcome-block">
     <div class="main-text">
-      <h1>Добро пожаловать в зоогостиницу "Тимошка"!</h1>
-      <p>Оставьте заявку на бронирование прямо сейчас!</p>
+      <h1>Добро пожаловать в зоогостиницу Тимошка!</h1>
+      <p>Оставьте заявку на бронирование<br>прямо сейчас!</p>
     </div>
 
     <form class="booking-form" action="/сдл" method="POST">
@@ -74,7 +74,7 @@
             <div class="offer-image">
                 <img src="/static/img/number_2.jpg" alt="Номер Люкс">
                 <div class="offer-overlay">
-                    <a href="#" class="offer-button">Заказать</a>
+                    <a href="/prices" class="offer-button">Посмотреть цены</a>
                 </div>
             </div>
             <div class="offer-content">
@@ -90,7 +90,7 @@
             <div class="offer-image">
                 <img src="/static/img/number_1.jpg" alt="Номер Полулюкс">
                 <div class="offer-overlay">
-                    <a href="#" class="offer-button">Заказать</a>
+                    <a href="/prices" class="offer-button">Посмотреть цены</a>
                 </div>
             </div>
             <div class="offer-content">
@@ -101,7 +101,6 @@
                 <p class="offer-price">От 900 руб/сутки</p>
             </div>
         </div>
-        <a href="/prices" class="link-to-praces">Перейти ко всем ценам</a>
     </div>
   </section>
 
@@ -112,10 +111,10 @@
   <!-- КОНТАКТЫ -->
   <div class="contact-page">
     <section class="contact-info">
-        <h1>Контакты</h1>
+        <h1>Контакты:</h1>
         <p>Мы всегда рады помочь и ответить на все ваши вопросы.</p>
         <p>Адрес: Зиповская, 5/23, Центральный округ, Краснодар, 350010</p>
-        <p>Телефон: +7‒918‒217‒33‒77</p>
+        <p>Телефон: +7-918-217-33-77</p>
         <p>Электронная почта: gtk-tim@yandex.ru</p>
     </section>
     <section class="contact-map">
@@ -124,5 +123,55 @@
         </div>
     </section>
   </div>
+<!-- ________________________________________________________________________________________________________- -->
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer">
+      <div class="block-footer-contacts">
+        <div class="footer-logo">
+          <img src="/static/img/logo.jpg">
+        </div>
 
+        <div class="footer-info">
+          <div class="footer-adress">
+            <h2>Address:</h2>
+            <p>Зиповская, 5/23, Центральный округ, Краснодар, 350010</p>
+          </div>
+          <div class="footer-contact">
+            <h2>Contact:</h2>
+            <a href="+7-918-217-33-77">+7-918-217-33-77</a>
+            <a href="gtk-tim@yandex.ru">gtk-tim@yandex.ru</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-links">
+        <div class="first-block">
+          <a href=""><h3></h3></a>
+          <a href=""><h3></h3></a>
+          <a href=""><h3></h3></a>
+          <a href=""><h3></h3></a>
+          <a href=""><h3></h3></a>
+        </div>
+        <div class="second-block">
+          <a href="/"><h3>Главная</h3></a>
+          <a href="/prices"><h3>Цены</h3></a>
+          <a href="/services"><h3>Сервисы</h3></a>
+          <a href="/about"><h3>О нас</h3></a>
+          <a href="/"><h3>Отправить заявку</h3></a>
+        </div>
+        <div class="third-block"></div>
+      </div>
+    </div>
+
+    <div class="privacy-policy">
+      <div class="privacy-text">
+        <p>© 2024 Relume. All rights reserved.</p>
+      </div>
+      <div class="privacy-links">
+        <a href="/">Privacy Policy</a>
+        <a href="/">Terms of Service</a>
+        <a href="/">Cookies Settings</a>
+      </div>
+    </div>
+  </footer>
 {% endblock %}
